rota de ListingAllBusinessHoursUseCase v2. Usando TreeSet para garantir a ordenação apirtir do enum weekday e garantindo a não duplicação de dados